[package]
name = "webview_deno"
version = "0.4.5"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.49.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
webview_official = "0.0.2"
futures = "0.3.5"
