[package]
name = "webview_deno"
version = "0.5.0"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.50.0"
webview-official-sys = "0.1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
futures = "0.3.5"
