[package]
name = "webview_deno"
version = "0.5.6"
authors = ["Elias Sjögreen", "Filippo Rossi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.77.1"
deno_json_op = "0.1.1"
webview-sys = { git = "https://github.com/Boscop/web-view", rev = "1c20b92" }

[features]
default = ["webview-sys/edge"]
